--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
+    "ts-node": "^10.9.2",
     "util": "^0.12.5"
   },
   "devDependencies": {
