--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "equinox-voter-controller",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
-  "main": "./dist/backend/index.js",
+  "main": "./src/backend/index.ts",
   "private": true,
   "engines": {
     "node": ">=18.x"
