--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@chain-registry/types": "^0.18.0",
     "@cosmjs/cosmwasm-stargate": "^0.32.2",
     "@cosmjs/stargate": "^0.32.2",
+    "@types/mongoose": "5.10.5",
     "axios": "^1.6.7",
     "chain-registry": "^1.28.0",
     "cors": "^2.8.5",
@@ -38,6 +39,8 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "5.10.19",
     "ts-node": "^10.9.2",
     "util": "^0.12.5"
   },
