--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "json": "ts-node ./src/backend/services/generate-json.ts",
     "start": "ts-node --project ./src/backend/tsconfig.json ./src/backend/index.ts",
     "dev": "cross-env NODE_ENV=development nodemon",
-    "capture": "ts-node ./src/backend/services/capture.ts"
+    "capture": "ts-node ./src/backend/services/capture.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -48,12 +49,15 @@
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.16",
     "@types/pako": "^2.0.3",
     "cosmjs-types": "^0.9.0",
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "pako": "^2.1.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.3.3"
   }
 }
